# scon

./: Cargo.toml  pyproject.toml  scon_config.json  stateful_containers.json
scon/: __init__.py  cli.py
scon/commands/: __init__.py  config.py  create.py  delete.py  list_containers.py  snapshot.py  start.py  stop.py
scon/utils/: __init__.py  config_manager.py  container_manager.py  json_storage.py
src/: main.rs
