[package]
name = "scon"
version = "0.1.0"
edition = "2021"
description = "Stateful Containers CLI tool"
authors = ["Art Fewell <afewell@gmail.com>"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"